# TCNopen

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
SDTv2/: CMakeLists.txt
SDTv2/cmake/: PackageDLU.cmake  WriteMD5.cmake
cmake/: Distclean.cmake  RunBindebPkg.cmake  RunLint.cmake  RunTrdpDist.cmake  RunTrdpDoc.cmake
cmake/toolchains/: Integrity.cmake  VxWorksPPC.cmake
scripts/: build_cross_matrix.sh  build_linux_matrix.sh
trdp/: CMakeLists.txt
trdp/cmake/: TRDPLegacyConfig.cmake  TRDPVersion.cmake  TrdpWiresharkPlugin.cmake  trdpConfig.cmake.in
trdp/cmake/toolchains/: linux-gcc.cmake
trdp/doc/: TRDP_XML_Test_API.md
trdp/example/: echoTrackside.c
trdp/spy/src/trdp_spy/: CMakeLists.txt  Doxyfile
trdp/src/vos/api/: vos_sock.h
trdp/src/vos/esp/: CMakeLists.txt
trdp/src/vos/posix/: vos_sockTSN.c
trdp/test/linking/: verify_link.c
trdp/test/udpmdcom/: mdTest4.c
trdp/test/xml/: TRDP_XML_APIS.md
